--- a/web/css/profile.css
+++ b/web/css/profile.css
@@ -210,7 +210,13 @@ body {
       line-height: 20px;
       margin-left: 5px; }
       .header-top-con .personal-con span.txt .nickname {
-        margin-bottom: 5px; }
+        margin-bottom: 5px;
+        width: 70px;
+        height: 30px;
+        line-height: 30px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap; }
     .header-top-con .personal-con span strong {
       font-size: 16px;
       color: #ff6700; }
