--- a/web/sass/layout/header.scss
+++ b/web/sass/layout/header.scss
@@ -157,6 +157,12 @@ $top-bg-color: #36363c;
 				margin-left: 5px;
 				.nickname{
 					margin-bottom: 5px;
+					width: 70px;
+					height: 30px;
+					line-height: 30px;
+					overflow: hidden;
+					text-overflow: ellipsis;
+					white-space: nowrap;
 				}
 			}
 			strong{
