1. fetch data from SopRespondent 2. show project survey list and can open

--- a/src/Wenwen/FrontendBundle/Resources/views/Survey/_sopSurveyList.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Survey/_sopSurveyList.html.twig
@@ -6,5 +6,6 @@
 <input type="hidden" id="sop_sig"      value="{{ sop_params.sig }}" />
 <input type="hidden" id="sop_time"     value="{{ sop_params.time }}" />
 
-<ul id="sop-profiling-item-template">
-</ul>
+<ul id="sop-profiling-item-template"></ul>
+
+<ul id="sop-research-item-template"></ul>
