--- a/src/Wenwen/FrontendBundle/Resources/views/FulcrumProjectSurvey/_fulcrumSurveyList.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/FulcrumProjectSurvey/_fulcrumSurveyList.html.twig
@@ -2,8 +2,16 @@
 <input type="hidden" id="sop_app_mid"  value="{{ sop_params.app_mid }}" />
 <input type="hidden" id="sop_sig"      value="{{ sop_params.sig }}" />
 <input type="hidden" id="sop_time"     value="{{ sop_params.time }}" />
+<input type="hidden" id="sop-api-url" value="https://{{ app_sop_hosts }}/api/v1_1/surveys/js?{{
+          { 'app_id' : sop_params.app_id,
+            'app_mid' : sop_params.app_mid,
+            'sig' : sop_params.sig,
+            'time' : sop_params.time,
+            'sop_callback' :  'surveylistCallback'}|url_encode
+}}">
 
-<tr>
+
+{#  #}
 <script type="text/template" id="sop-fulcrum-research-item-template">
   <td class="first">
     <span class="trade" title="">商业问卷</span>
@@ -23,5 +31,25 @@
   </td>
 </script>
 
+<script type="text/template" id="sop-fulcrum-research-item-template">
+  <td class="first">
+    <span class="trade" title="">商业问卷</span>
+  </td>
+  <td class="period">--</td>
+  <td class="num"><%- model.getNumLabel() %></td>
+  <td>
+    <%- model.get('title') %>
+  </td>
+  <td class="answerOn">
+    <a href="#" class="open-link">可回答</a>
+  </td>
+  <td class="point">
+    <span class="num_l">
+      <%- model.get('extra_info').point.complete %>
+    </span>
+  </td>
+</script>
 
-</tr>
+<script type="text/javascript">
+</script>
+
