--- a/src/Wenwen/FrontendBundle/Resources/views/Survey/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Survey/index.html.twig
@@ -15,7 +15,7 @@
 		<div class="survey survey-sub">
 			<em></em>
 			<h1>问卷列表</h1>
-            <ul>
+            <ul id="surveyList">
             {% if  votes|length > 10  %}
                 <li>现在还没有新的问卷调查。</li>
             {% endif %}
@@ -118,18 +118,6 @@
 			</ul>
 
             {{ include( 'WenwenFrontendBundle:Survey:_sopSurveyList.html.twig', {'sop_params': sop_params, 'preview': preview} ) }}
-
-			<div class="page-wrapper">
-				<p class="page">
-					<span class="active">1</span>
-					<span>2</span>
-					<span>3</span>
-					<span>4</span>
-					<span>5</span>
-					<span>6</span>
-					<span>尾页</span>
-				</p>
-			</div>
 		</div>
 	</div>
 	<div class="main-con-right right">
@@ -143,5 +131,5 @@
 {% endblock %}
 
 {% block javascript %}
-<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/survey/survey.js')}}"></script>
+<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/survey/surveyList.js')}}"></script>
 {% endblock %}
