--- a/web/css/survey.css
+++ b/web/css/survey.css
@@ -491,6 +491,7 @@ body {
       width: 22%;
       border-bottom: none; }
   .survey-sub .survey-btn {
+    color: #666;
     background: transparent;
     width: 30%;
     line-height: 950%;
