--- a/src/Wenwen/FrontendBundle/Resources/views/Home/home.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Home/home.html.twig
@@ -42,7 +42,7 @@
 			<ul>
 				<li>
 					<div class="survey-item">
-						<div class="title"><a href="">关于饮用水品牌调查</a></div>
+						<div class="title">关于饮用水品牌调查</div>
 						<ul class="con clearfix">
 							<li class="first">
 								<span>问卷编号</span>
@@ -66,7 +66,7 @@
 				</li>
 				<li>
 					<div class="survey-item">
-						<div class="title"><a href="">关于饮用水品牌调查</a></div>
+						<div class="title">关于饮用水品牌调查</div>
 						<ul class="con clearfix">
 							<li class="first">
 								<span>问卷编号</span>
