--- a/src/Wenwen/FrontendBundle/Resources/views/Survey/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Survey/index.html.twig
@@ -21,7 +21,7 @@
             {% endif %}
 				<li>
 					<div class="survey-item">
-						<div class="title"><a href="">关于饮用水品牌调查</a></div>
+						<div class="title">关于饮用水品牌调查</div>
 						<ul class="con clearfix">
 							<li class="first">
 								<span>问卷编号</span>
@@ -45,7 +45,7 @@
 				</li>
 				<li>
 					<div class="survey-item">
-						<div class="title"><a href="">关于饮用水品牌调查</a></div>
+						<div class="title">关于饮用水品牌调查</div>
 						<ul class="con clearfix">
 							<li class="first">
 								<span>问卷编号</span>
@@ -69,7 +69,7 @@
 				</li>
 				<li>
 					<div class="survey-item">
-						<div class="title"><a href="">关于饮用水品牌调查</a></div>
+						<div class="title">关于饮用水品牌调查</div>
 						<ul class="con clearfix">
 							<li class="first">
 								<span>问卷编号</span>
@@ -93,7 +93,7 @@
 				</li>
 				<li>
 					<div class="survey-item">
-						<div class="title"><a href="">关于饮用水品牌调查</a></div>
+						<div class="title">关于饮用水品牌调查</div>
 						<ul class="con clearfix">
 							<li class="first">
 								<span>问卷编号</span>
