--- a/web/css/component/survey.css
+++ b/web/css/component/survey.css
@@ -5,11 +5,13 @@
   padding-left: 20px;
   border-bottom: 1px solid #f6f6f6;
   font-weight: bold; }
-.main-con-left .title a {
+.main-con-left .title {
   color: #0078b6;
   font-size: 15px;
   font-weight: bold;
   line-height: 35px; }
+  .main-con-left .title a {
+    color: #0078b6; }
 .main-con-left ul {
   width: 100%; }
 .main-con-left li {
@@ -63,7 +65,7 @@
 .survey-btn {
   width: 0%;
   height: 100%;
-  line-height: 800%;
+  line-height: 1000%;
   position: absolute;
   z-index: 1000;
   top: 0;
