--- a/src/Wenwen/FrontendBundle/Resources/views/Survey/_sopSurveyList.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Survey/_sopSurveyList.html.twig
@@ -11,7 +11,7 @@
 <ul id="sop-research-item-template"></ul> -->
 <script type="text/template" id="sop-profiling-item-template">
 	<div class="survey-item">
-		<div class="title"><a href="" title="<%- model.get('title') %>"><%- model.get('title') %></a></div>
+		<div class="title"><%- model.get('title') %></div>
 		<ul class="con clearfix">
 			<li class="first">
 				<span>问卷编号</span>
@@ -36,7 +36,7 @@
 
 <script type="text/template" id="sop-research-item-template">
 	<div class="survey-item">
-		<div class="title"><a href="" title="<%- model.get('title') %>"><%- model.get('title') %></a></div>
+		<div class="title"><%- model.get('title') %></div>
 		<ul class="con clearfix">
 			<li class="first">
 				<span>问卷编号</span>
