--- a/web/css/vote.css
+++ b/web/css/vote.css
@@ -293,11 +293,13 @@ body {
   padding-left: 20px;
   border-bottom: 1px solid #f6f6f6;
   font-weight: bold; }
-.main-con-left .title a {
+.main-con-left .title {
   color: #0078b6;
   font-size: 15px;
   font-weight: bold;
   line-height: 35px; }
+  .main-con-left .title a {
+    color: #0078b6; }
 .main-con-left ul {
   width: 100%; }
 .main-con-left li {
@@ -351,7 +353,7 @@ body {
 .survey-btn {
   width: 0%;
   height: 100%;
-  line-height: 800%;
+  line-height: 1000%;
   position: absolute;
   z-index: 1000;
   top: 0;
@@ -496,9 +498,11 @@ body {
     width: 68%; }
     .vote-sub .vote-txt span strong {
       font-weight: normal; }
-    .vote-sub .vote-txt .title a {
-      line-height: 20px;
-      font-size: 15px; }
+    .vote-sub .vote-txt .title {
+      line-height: 20px; }
+      .vote-sub .vote-txt .title a {
+        line-height: 20px;
+        font-size: 15px; }
     .vote-sub .vote-txt .con {
       margin-top: 13px;
       padding-left: 3px;
