--- a/src/Wenwen/FrontendBundle/Resources/views/ProjectSurvey/complete.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/ProjectSurvey/complete.html.twig
@@ -4,9 +4,9 @@
 {% block stylesheet %}
 <link href="{{ asset('css/questionnaire.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
- 
+
 {% block header %}
-{% include 'WenwenFrontendBundle:Components:_headerSimpleQ.html.twig' %} 
+{% include 'WenwenFrontendBundle:Components:_headerSimpleQ.html.twig' %}
 {% endblock %}
 
 {% block body %}
@@ -17,10 +17,8 @@
 			<span class="txt left"><h2>亲爱的用户！</h2>
             {% if answer_status == 'complete' %}
             感谢您参加本次的问卷调查。积分会在调查结束后的3周内自动累计。
-            {% elseif answer_status == 'screenout'  or answer_status == 'quotafull' %}
+            {% else %}
             感谢您参加本次的问卷调查。您不符合本次要求或者本次问卷调查名额已满。
-            {% elseif answer_status == 'error' %}
-            error
             {% endif %}
             </span>
 		</div>
