--- a/web/sass/survey.scss
+++ b/web/sass/survey.scss
@@ -41,7 +41,7 @@
 		color: #666;
 		background: transparent;
 		width: 30%;
-		line-height: 950%;
+		line-height: 170px;
 		cursor: default;
 		@include transition(width, 0);
 		a{
