--- a/web/css/questionnaire.css
+++ b/web/css/questionnaire.css
@@ -307,13 +307,12 @@ body {
   margin-top: 0;
   background: url(../img/questionnaire/questionnaireTopbgx.png) repeat-x 0 88px; }
   .main .qnWrap {
-    width: 1360px;
+    width: 100%;
     min-height: 400px;
-    margin: 0 auto;
     position: relative;
     top: 49px;
     z-index: 1;
-    background: url(../img/questionnaire/questionnaireBgtop.png) repeat-x 0 39px; }
+    background: url(../img/questionnaire/questionnaireBgtop.png) no-repeat center 39px; }
     .main .qnWrap .qnConBg {
       width: 100%;
       height: 100%;
@@ -322,24 +321,28 @@ body {
       z-index: 2;
       background: url(../img/questionnaire/questionnaireBgx.png) repeat-y center; }
       .main .qnWrap .qnConBg .qnConBot {
-        width: 1000px;
+        width: 940px;
         height: 28px;
         text-align: center;
         position: absolute;
-        left: 180px;
+        left: 50%;
+        margin-left: -470px;
         bottom: -23px;
         z-index: 2;
         background: url(../img/questionnaire/questionnaireBot.png) no-repeat bottom; }
       .main .qnWrap .qnConBg .bottom {
         position: absolute;
         bottom: -130px;
-        left: 500px;
+        width: 100%;
+        text-align: center;
         margin-bottom: 40px;
         color: #666; }
     .main .qnWrap .qnCon {
       position: absolute;
       z-index: 3;
-      margin: 90px 0 0 230px; }
+      left: 50%;
+      width: 940px;
+      margin-left: -470px; }
       .main .qnWrap .qnCon .qnTxt {
         width: 796px;
         margin: 50px auto 0;
@@ -389,40 +392,38 @@ body {
           margin-top: 10px;
           text-align: center;
           line-height: 20px; }
-    .main .qnWrap .qnEnd {
-      width: 903px; }
-      .main .qnWrap .qnEnd .qnEndTxt {
-        margin: 90px 0 0 170px; }
-        .main .qnWrap .qnEnd .qnEndTxt .txt {
-          font-size: 14px;
-          line-height: 30px;
-          margin-left: 31px;
-          margin-top: 35px; }
-          .main .qnWrap .qnEnd .qnEndTxt .txt h2 {
-            font-size: 20px;
-            font-weight: bold; }
-      .main .qnWrap .qnEnd .qnEndRecommend {
-        margin-top: 170px; }
-        .main .qnWrap .qnEnd .qnEndRecommend .tit {
-          height: 70px;
-          line-height: 40px;
-          font-size: 30px;
-          font-weight: normal;
-          color: #757575;
-          margin-top: 30px; }
-        .main .qnWrap .qnEnd .qnEndRecommend .list table {
-          width: 100%; }
-          .main .qnWrap .qnEnd .qnEndRecommend .list table tr {
-            border-bottom: 1px solid #f6f6f6; }
-            .main .qnWrap .qnEnd .qnEndRecommend .list table tr td {
-              height: 48px;
-              line-height: 48px;
-              font-size: 14px;
-              color: #333; }
-              .main .qnWrap .qnEnd .qnEndRecommend .list table tr td a {
-                color: #0078b6; }
-              .main .qnWrap .qnEnd .qnEndRecommend .list table tr td:nth-child(1) {
-                padding-left: 10px; }
-              .main .qnWrap .qnEnd .qnEndRecommend .list table tr td:nth-child(4) {
-                text-align: right;
-                padding-right: 10px; }
+    .main .qnWrap .qnEnd .qnEndTxt {
+      margin: 180px 0 0 170px; }
+      .main .qnWrap .qnEnd .qnEndTxt .txt {
+        font-size: 14px;
+        line-height: 30px;
+        margin-left: 31px;
+        margin-top: 35px; }
+        .main .qnWrap .qnEnd .qnEndTxt .txt h2 {
+          font-size: 20px;
+          font-weight: bold; }
+    .main .qnWrap .qnEnd .qnEndRecommend {
+      margin-top: 170px; }
+      .main .qnWrap .qnEnd .qnEndRecommend .tit {
+        height: 70px;
+        line-height: 40px;
+        font-size: 30px;
+        font-weight: normal;
+        color: #757575;
+        margin-top: 30px; }
+      .main .qnWrap .qnEnd .qnEndRecommend .list table {
+        width: 100%; }
+        .main .qnWrap .qnEnd .qnEndRecommend .list table tr {
+          border-bottom: 1px solid #f6f6f6; }
+          .main .qnWrap .qnEnd .qnEndRecommend .list table tr td {
+            height: 48px;
+            line-height: 48px;
+            font-size: 14px;
+            color: #333; }
+            .main .qnWrap .qnEnd .qnEndRecommend .list table tr td a {
+              color: #0078b6; }
+            .main .qnWrap .qnEnd .qnEndRecommend .list table tr td:nth-child(1) {
+              padding-left: 10px; }
+            .main .qnWrap .qnEnd .qnEndRecommend .list table tr td:nth-child(4) {
+              text-align: right;
+              padding-right: 10px; }
