--- a/web/sass/questionnaire.scss
+++ b/web/sass/questionnaire.scss
@@ -26,13 +26,12 @@
 	margin-top: 0;
 	background: url(../img/questionnaire/questionnaireTopbgx.png) repeat-x 0 88px;
 	.qnWrap{
-		width: 1360px;
+		width: 100%;
 		min-height: 400px;
-		margin: 0 auto;
 		position: relative;
 		top: 49px;
 		z-index: 1;
-		background: url(../img/questionnaire/questionnaireBgtop.png) repeat-x 0 39px;	
+		background: url(../img/questionnaire/questionnaireBgtop.png) no-repeat center 39px;	
 		.qnConBg{
 			width: 100%;
 			height: 100%;
@@ -41,11 +40,12 @@
 			z-index: 2;
 			background: url(../img/questionnaire/questionnaireBgx.png) repeat-y center;
 			.qnConBot{
-				width: 1000px;
+				width: 940px;
 				height: 28px;
 				text-align: center;
 				position: absolute;
-				left: 180px;
+				left: 50%;
+				margin-left: -470px;
 				bottom: -23px;
 				z-index: 2;
 				background: url(../img/questionnaire/questionnaireBot.png) no-repeat bottom;
@@ -53,7 +53,8 @@
 			.bottom{
 				position: absolute;
 				bottom: -130px;
-				left: 500px;
+				width: 100%;
+				text-align: center;
 				margin-bottom: 40px;
 				color: #666;
 			}
@@ -61,7 +62,9 @@
 		.qnCon{
 			position: absolute;
 			z-index: 3;  
-			margin: 90px 0 0 230px;
+			left: 50%;
+			width: 940px;
+			margin-left: -470px;
 			.qnTxt{
 				width: 796px;
 				margin: 50px auto 0;
@@ -114,9 +117,8 @@
 			}
 		}
 		.qnEnd{
-			width: 903px;
 			.qnEndTxt{
-				margin: 90px 0 0 170px;
+				margin: 180px 0 0 170px;
 				.txt{
 					font-size: 14px;
 					line-height: 30px;
