--- a/web/css/404.css
+++ b/web/css/404.css
@@ -380,10 +380,11 @@ body {
       width: 330px;
       height: 100px;
       position: absolute;
-      top: 100px;
-      left: 267px; }
+      top: 75px;
+      left: 250px; }
       .main .main-about-con .errorCon .errorText .txt {
-        font-size: 18px; }
+        font-size: 14px;
+        line-height: 18px; }
       .main .main-about-con .errorCon .errorText .btn {
         margin-top: 31px; }
         .main .main-about-con .errorCon .errorText .btn a {
