--- a/web/sass/404.scss
+++ b/web/sass/404.scss
@@ -14,10 +14,11 @@
 				width: 330px;
 				height: 100px;
 				position: absolute;
-				top: 100px;
-				left: 267px;
+				top: 75px;
+				left: 250px;
 				.txt{
-					font-size: 18px;
+					font-size: 14px;
+					line-height: 18px;
 				}
 				.btn{
 					margin-top: 31px;
