--- a/web/sass/questionnaire.scss
+++ b/web/sass/questionnaire.scss
@@ -61,7 +61,8 @@
 		}
 		.qnCon{
 			position: absolute;
-			z-index: 3;  
+			z-index: 3; 
+			top: 80px; 
 			left: 50%;
 			width: 940px;
 			margin-left: -470px;
@@ -83,7 +84,7 @@
 					}
 				}
 				.prompt{
-					width: 100%;
+					width: 716px;
 					padding: 15px 40px;
 					background: #f2f2f5;
 					color: #666;
