update css and js file

--- a/src/Wenwen/FrontendBundle/Resources/views/ProjectSurvey/information.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/ProjectSurvey/information.html.twig
@@ -16,7 +16,7 @@
 
 <div class="qnWrap">
     <div class="qnCon">
-        <div class="qnTxt" >
+        <div class="qnTxt" style="display: none;">
             <h2></h2>
             <div class="subtit">
                 <strong>问卷编号： <span id="no"></span><br></strong>
@@ -36,7 +36,7 @@
             </div>
             <div class="tips">请确认内容之后点击&lt;开始回答问卷&gt;<br /> （之后无法返回现在的页面）</div>
         </div>
-        <div class="error-message"></div>
+        <div class="error-message" style="display: none;"></div>
     </div>
     {% include 'WenwenFrontendBundle:ProjectSurvey:_footer.html.twig' %}
 </div>
