--- a/web/sass/questionnaire.scss
+++ b/web/sass/questionnaire.scss
@@ -62,14 +62,13 @@
 		.qnCon{
 			position: absolute;
 			z-index: 3; 
-			top: 80px; 
+			top: 100px; 
 			left: 50%;
 			width: 940px;
 			margin-left: -470px;
 			.qnTxt{
 				width: 796px;
-				margin: 50px auto 0;
-				*margin: 50px auto 0 0; 
+				margin: 30px auto 0; 
 				color: #4d4d4d;
 				h2{
 					font-size: 28px;
@@ -115,6 +114,11 @@
 					text-align: center;
 					line-height: 20px;
 				}
+			}
+			.error-message{
+				font-size: 16px;
+				text-align: center;
+				margin-top: 50px;
 			}
 		}
 		.qnEnd{
