update css and add recommendedSurveys template

--- a/src/Wenwen/FrontendBundle/Resources/views/Exception/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Exception/index.html.twig
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block body %}
-<div class="main-about-con w1000 clearfix">
+<div class="main-error-con w1000 clearfix">
 	<div class="errorCon">
 		<div class="errorText">
 			{% if errorMessage is defined and errorMessage is not empty %}
