--- a/web/sass/404.scss
+++ b/web/sass/404.scss
@@ -4,8 +4,7 @@
 @import "layout/header";
 @import "layout/footer";
 .main{
-	.main-about-con{
-		background: #f5f5f7;
+	.main-error-con{
 		.errorCon{
 			height: 536px;
 			background: url(../img/404/errorbox.png) no-repeat 0 50px;
