--- a/web/css/questionnaire.css
+++ b/web/css/questionnaire.css
@@ -321,12 +321,12 @@ body {
       z-index: 2;
       background: url(../img/questionnaire/questionnaireBgx.png) repeat-y center; }
       .main .qnWrap .qnConBg .qnConBot {
-        width: 940px;
+        width: 1000px;
         height: 28px;
         text-align: center;
         position: absolute;
         left: 50%;
-        margin-left: -470px;
+        margin-left: -500px;
         bottom: -23px;
         z-index: 2;
         background: url(../img/questionnaire/questionnaireBot.png) no-repeat bottom; }
@@ -406,28 +406,30 @@ body {
         .main .qnWrap .qnEnd .qnEndTxt .txt h2 {
           font-size: 20px;
           font-weight: bold; }
-    .main .qnWrap .qnEnd .qnEndRecommend {
+    .main .qnWrap .qnRecoEnd .qnEndTxt {
+      margin: 80px 0 0 170px; }
+    .main .qnWrap .qnRecoEnd .qnEndRecommend {
       margin-top: 170px; }
-      .main .qnWrap .qnEnd .qnEndRecommend .tit {
+      .main .qnWrap .qnRecoEnd .qnEndRecommend .tit {
         height: 70px;
         line-height: 40px;
         font-size: 30px;
         font-weight: normal;
         color: #757575;
         margin-top: 30px; }
-      .main .qnWrap .qnEnd .qnEndRecommend .list table {
+      .main .qnWrap .qnRecoEnd .qnEndRecommend .list table {
         width: 100%; }
-        .main .qnWrap .qnEnd .qnEndRecommend .list table tr {
+        .main .qnWrap .qnRecoEnd .qnEndRecommend .list table tr {
           border-bottom: 1px solid #f6f6f6; }
-          .main .qnWrap .qnEnd .qnEndRecommend .list table tr td {
+          .main .qnWrap .qnRecoEnd .qnEndRecommend .list table tr td {
             height: 48px;
             line-height: 48px;
             font-size: 14px;
             color: #333; }
-            .main .qnWrap .qnEnd .qnEndRecommend .list table tr td a {
+            .main .qnWrap .qnRecoEnd .qnEndRecommend .list table tr td a {
               color: #0078b6; }
-            .main .qnWrap .qnEnd .qnEndRecommend .list table tr td:nth-child(1) {
+            .main .qnWrap .qnRecoEnd .qnEndRecommend .list table tr td:nth-child(1) {
               padding-left: 10px; }
-            .main .qnWrap .qnEnd .qnEndRecommend .list table tr td:nth-child(4) {
+            .main .qnWrap .qnRecoEnd .qnEndRecommend .list table tr td:nth-child(4) {
               text-align: right;
               padding-right: 10px; }
