--- a/web/sass/questionnaire.scss
+++ b/web/sass/questionnaire.scss
@@ -40,12 +40,12 @@
 			z-index: 2;
 			background: url(../img/questionnaire/questionnaireBgx.png) repeat-y center;
 			.qnConBot{
-				width: 940px;
+				width: 1000px;
 				height: 28px;
 				text-align: center;
 				position: absolute;
 				left: 50%;
-				margin-left: -470px;
+				margin-left: -500px;
 				bottom: -23px;
 				z-index: 2;
 				background: url(../img/questionnaire/questionnaireBot.png) no-repeat bottom;
@@ -134,6 +134,11 @@
 						font-weight: bold;
 					}
 				}
+			}
+		}
+		.qnRecoEnd{
+			.qnEndTxt{
+				margin: 80px 0 0 170px;
 			}
 			.qnEndRecommend{
 				margin-top: 170px;
