--- a/src/Wenwen/FrontendBundle/Resources/views/About/regulations.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/About/regulations.html.twig
@@ -25,14 +25,14 @@
 				2. &lt;会员&gt;为，在根据dataSpring所指定的流程，在同意本会员协议后，注册本服务，并由所dataSpring承认的用户。<br/>
 				3. &lt;会员协议&gt;为个人使用dataSpring提供的服务而制定的协议。<br/>
 				4. &lt;其他的用户协议&gt;为用户在使用dataSpring所提供的服务时，除本会员协议之外所制定的以下协议<br/>
-				由dataSpring任意做出的对于使用条件的各种告知<br/>
-				第五条所作出的通知<br/>
-				5. &lt;个人信息&gt;为关于会员的信息，该信息包含姓名，生日等可以识别特定的个人的信息（包括与其他的信息参照后，可以识别特定个人的信息）。</p>
+				&nbsp;&nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;由dataSpring做出的对于使用条件的各种告知<br/>
+				&nbsp;&nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;第五条所作出的通知<br/>
+				5. &lt;个人信息&gt;为关于会员的信息，该信息包含会员名，生日等可以识别特定的个人的信息（包括与其他的信息参照后，可以识别特定个人的信息）。</p>
 				<p><strong>第三条　协议的适用范围</strong><br/>
 				1. 以任何名称的其他的用户协议，都将由本会员协议构成。<br/>
 				2. 在本会员协议与其他的用户协议发生矛盾时，将依照该用户协议所制定的章程为准。</p>
 				<p><strong>第四条 协议的更改</strong><br/>
-				1. dataSpring在不经过用户的承认下，可以更改本会员协议。这种情况下，在使用本服务时，将以更改后的会员协议为准。<br/>
+				1. dataSpring在不违反国家法律法规的基础上以及不损害用户或会员的利益基础上可以更改本会员协议。这种情况下，在使用本服务时，将以更改后的会员协议为准。<br/>
 				2. 更改后的会员协议，除了dataSpring另外指定的情况下，在网站上登载时即生效。</p>
 				<p><strong>第五条 (dataSpring的通知)</strong><br/>
 				1. dataSpring将通过在网站上登载以及其他dataSpring认为妥当的方法，对会员做出重要信息的通知。<br/>
@@ -40,39 +40,49 @@
 
 				<p><strong class="font20">第二章　会员</strong></p>
 				<p><strong>第六条 会员的注册</strong><br/>
-				1. 在希望使用本服务时，应根据dataSpring所制定的方法进行会员注册。<br/>
+				1. 在希望本会员或参与活动时，应根据dataSpring所制定的方法进行会员注册。<br/>
 				2. 注册会员的人（包括该会员协议的对象，以下将称为&lt;注册者&gt;）在注册时，将被看作同意本会员协议。</p>
 				<p><strong>第七条 注册的承认</strong><br/>
 				1. dataSpring将通过必要的程序，承认会员的注册。在承认会员注册的同时，本协议将生效。</p>
 				<p><strong>第八条 不被承认的注册</strong><br/>
 				1. 经过dataSpring判断认为注册者不具备成为会员条件的情况下，将不承认该会员的注册。</p>
 				<p><strong>第九条 本服务的使用以及会员的资格</strong><br/>
-				1. 本服务为仅限于非盈利的个人使用。<br/>
-				2. 本服务仅限于在中国国内居住的16岁以上的会员可以使用（未成年人应取得父母或者应其他监护人的同意）。<br/>
-				3. 违反本会员协议的情况下，将禁止以任何方式使用本网站。<br/>
-				4. 在dataSpring的单独判断下，任何时候都有权利拒绝提供会员资格以及其他的服务。且没有必要向会员透露理由。</p>
+				1. 本服务仅限于在中国国内居住的16岁以上的会员可以使用（未成年人应取得父母或者应其他监护人的同意）。<br/>
+				2. 违反本会员协议的情况下，将禁止以任何方式使用本网站。<br/>
+				3. 在dataSpring的单独判断下，任何时候都有权利拒绝提供会员资格以及其他的服务。且没有必要向会员透露理由。</p>
 
 				<p><strong class="font20">第三章　会员的义务</strong></p>
 				<p><strong>第十条 会员的账户以及密码。</strong><br/>
 				1. dataSpring将提供会员账户和密码，或者提供设定用户名以及密码的权利。<br/>
-				2. 会员有义务安全地使用会员用户名以及密码，并对管理负有所有的责任。不论该会员是否有故意的过失，dataSpring将不对用户名，密码被第三者（包括但不仅限于会员的家庭成员）使用时所造成的各种损失负责。</p>
+				2. 用户设置的会员名不得侵犯或涉嫌侵犯他人合法权益以及有涉及国家禁止的规定。<br/>
+				3. 会员有义务安全地使用会员用户名以及密码，并对管理负有所有的责任。不论该会员是否有故意的过失，dataSpring将不对用户名，密码被第三者（包括但不仅限于会员的家庭成员）使用时所造成的各种损失负责。<br/>
+				4. 会员不得出现恶意注册恶意点击等行为，例如：为获取积分或佣金，多次重复点击或参与某些指定的网上行为。 网站拥有独自判断权。</p>
 				<p><strong>第十一条 会员的义务</strong><br/>
 				1. 会员应该在注册信息发生改变的时候，及时通知dataSpring以做出更改。<br/>
 				2. 会员应该积极参加dataSpring所组织的市场调查活动，同时在回答问卷时不应提供虚伪的数据或者随意进行解答。例如，解答问卷时作出与以前的调查相矛盾的回答，或者作出统计数据上不可能的回答。<br/>
-				3. 会员在使用本服务时，应该遵守法律，以及本会员协议。<br/>
-				4. 会员应该对参加调查活动，解答问卷时所获得的信息以及服务的内容保密，不透露给第三者。</p>
+				3. 会员应该对参加调查活动，解答问卷时所获得的信息以及服务的内容保密，不透露给第三者。<br/>
+				4. 在使用本网站服务过程中的所有行为应遵守国家法律、法规等规范性文件及本网站各项规则的规定和要求，不违背社会公共利益或公共道德，不损害他人的合法权益。会员一旦违反前述承诺，产生任何法律后果的，会员应以自己的名义独立承担所有的法律责任，并确保本网站免于因此产生任何损失。<br/>
+				5. 会员不得使用任何装置、外挂软件或例行程序干预或试图干预本网站平台的正常运作以及有加重本网站网络设备的行为。本网站有权对会员是否违反上述承诺做出单方面认定，并根据单方认定结果适用规则予以处理或终止向会员提供服务，且无须征得会员的同意或提前通知予会员。<br/>
+				6. 本网站显示的资料（包括但不限于文字、图表、标识、图像、数字下载和数据编辑）、汇编内容、软件均为本网站或其内容提供者的财产，不得以复制、传播等任何方式使用本网站上显示的资料，不得对网站平台上的任何数据作商业性利用，上述知识产权均受法律保护。<br/>
+				7. 禁止会员在本网站散发小广告等行为或其他任何形式的推广。本网站有权处置。<br/>
+				8. 会员不得以虚构或欺诈的方式参加本网站上的相关活动，不得采取不正当方式制造或提高自身的信用度、等级，积分等。<br/>
+				9. 会员在使用本网站服务过程中，所产生的应纳税赋，以及一切硬件、软件、服务及其它方面的费用，均由会员独自承担。</p>
 
 				<p><strong class="font20">第四章 服务</strong></p>
 				<p><strong>第十二条 本服务内容的更改和停止</strong><br/>
-				会员应该同意dataSpring可以在不事先通知会员的情况下，更改服务的使用条件和规则，或者改变服务的内容，构成以及名称。本服务的更改，包含服务一部分内容的更改和废除，但不仅限于此。</p>
+				会员应该同意dataSpring可以在不事先通知会员的情况下，更改服务的使用条件和规则，或者改变服务的内容，构成以及名称。本服务的更改，包含服务一部分内容的更改和废除，但不仅限于此。但网站应当予以在网站上予以公告。</p>
 
 				<p><strong class="font20">第五章 积分</strong></p>
 
 				<p><strong>第十三条 积分和奖励</strong><br/>
 				1. 问问积分为会员参加调查，或者作出某种行动时的报酬。但是，积分的赠与时间，赠与方法，以及额度由dataSpring进行判断并制定。<br/>
-				2. 在积累一定数量的积分后，会员可以自由地申请将积分兑换成各种各样的奖励。<br/>
-				3. 由会员注册信息的泄漏，会员自己的失误所造成的，积分无法累积或者无法兑换成现金的情况,dataSpring不负责任。<br/>
-				4. 会员获得积分时所产生的税金，兑换现金时的手续费，以及使用积分购买的服务或者商品时发生的税金以及其他费用，将由会员负担。</p>
+				2. 会员可以通过点击本网站所提供的商家、广告、搜索结果等，产生约定的网上行为，如注册、购物、参加调查问卷、浏览广告等，按照要求完成上述行为，可获得相关报酬。<br/>
+				3. 严禁通过虚假购买产品恶意取消订单等非法手段来提高个人获利，一经发现，本网站有权取消会员资格，并追回已经支付的全部积分或奖励，同时该会员必须承担由此给本网站带来的所有损失。<br/>
+				4. 积分或返利的结算：本网站在收到广告主支付的佣金后，将按照网站中约定的比例或额度计入会员在本网站的虚拟账户。<br/>
+				5. 在积累一定数量的积分后，会员可以自由地申请将积分兑换成各种各样的奖励。<br/>
+				6. 如果会员没有出现违规情况，本网站将在收到会员的兑换申请后按照规定予以兑现。<br/>
+				7. 由会员注册信息的泄漏，会员自己的失误所造成的，积分无法累积或者无法兑换成现金的情况，dataSpring不负责任。<br/>
+				8. 会员获得积分时所产生的税金，兑换现金时的手续费，以及使用积分购买的服务或者商品时发生的税金以及其他费用，将由会员负担。会员的积分经兑换取得的所得应该独自负责应对国家税务，执行国家法律。</p>
 
 				<p><strong>第十四条 积分的取消</strong><br/>
 				1. 用户提供虚伪信息、错误信息，或者提供非最新信息，经dataSpring调查的购买者，或者合作伙伴的判断下，可以取消或者没收赠与会员的，以及会员已经拥有的积分。<br/>
@@ -83,11 +93,10 @@
 
 				<p><strong>第十五条 使用上的限制</strong><br/>
 				1. dataSpring在以下情况，或者经过dataSpring的判断有可能出现以下的情况时，可以不经过会员的同意，限制会员使用该服务。<br/>
-				&nbsp;&nbsp;&nbsp;&nbsp;a. 根据用户使用服务的状况，以及dataSpring得到的其他信息，可以推测该用户的账户，用户名以及密码未经允许被第三者使用的情况。<br/>
-				&nbsp;&nbsp;&nbsp;&nbsp;b. 被dataSpring判定违反本会员协议的情况。<br/>
-				&nbsp;&nbsp;&nbsp;&nbsp;c. 上述以外经dataSpring的判断认为紧急性很高的情况。<br/>
-
-				2. dataSpring在采取前项的措施，造成该会员无法使用该服务，造成损失的时候，dataSpring不负责任。</p>
+				2. 根据用户使用服务的状况，以及dataSpring得到的其他信息，可以推测该用户的账户，用户名以及密码未经允许被第三者使用的情况。<br/>
+				3. 被dataSpring判定违反本会员协议的情况。<br/>
+				4. 上述以外经dataSpring的判断认为紧急性很高的情况。<br/>
+				5. dataSpring在采取前项的措施，造成该会员无法使用该服务，造成损失的时候，dataSpring不负责任。</p>
 
 				<p><strong>第十六条 服务的暂时中断</strong><br/>
 
@@ -136,7 +145,7 @@
 				<p><strong class="font20">第八章 损失的赔偿</strong></p>
 
 				<p><strong>第二十二条 保证的放弃</strong><br/>
-				1. 会员本人应该对包括本服务的内容在内的，在本服务的使用负责。本服务以及各种信息，将在现状或者可能的限度内被提供。<br/>
+				1. 会员本人应该对包括本服务的内容在内的，在本服务的使用负责，将在现状或者可能的限度内被提供。<br/>
 				2. dataSpring以及与有关的公司，供应商，以及各个公司的董事，管理人，代理人，员工不论以何种方式，不论明示或者暗示都将放弃对本服务的保证。<br/>
 				3. 因会员无法访问本服务的内容或者使用本服务所造成的迟延或者所有损失都由会员单独负责。</p>
 
@@ -159,28 +168,33 @@
 				&nbsp;&nbsp;&nbsp;&nbsp;d. 为了保证调查的正确性与品质，而进行的联络<br/>
 				&nbsp;&nbsp;&nbsp;&nbsp;e. 改善dataSpring所提供的服务以及信息内容的品质<br/>
 				&nbsp;&nbsp;&nbsp;&nbsp;f. 在dataSpring新服务开始时面向会员的告知以及诱导<br/>
-				&nbsp;&nbsp;&nbsp;&nbsp;g. 其他经过会员认可的活动</p>
+				&nbsp;&nbsp;&nbsp;&nbsp;g. 会员了解并同意，本网站有权应政府部门（包括司法及行政部门）的要求，向其提供会员在本网站填写的注册信息和交易纪录等必要信息。如会员涉嫌侵犯他人知识产权，则本网站亦有权在初步判断涉嫌侵权行为存在的情况下，向司法部门提供会员必要的身份信息。除非法律法规或相关政府部门另有要求，本网站将在前述信息披露情况发生后及时向会员发出书面通知<br/>
+				&nbsp;&nbsp;&nbsp;&nbsp;h. 其他经过会员认可的活动</p>
 
 
 				<p><strong class="font20">第十章 其他</strong></p>
 
 				<p><strong>第二十六条 知识产权的归属</strong><br/>
 
-				会员在本服务的网站上所产生的信息内容时，将不会任何著作权使用费。会员应该提供给dataSpring且非独占的，无法取消，完全（继承）Sub lisence的权利给dataSpring以及其dataSpring的相关公司。根据该权利协议，dataSpring可以不需要获得会员的承认或者对用户进行补偿，既可在全世界各种媒体上使 用，复制，修正，改变，翻译，创作派生物，发送，实行，登载用户所产生的信息内容。</p>
+				会员在本服务的网站上所产生的信息内容时，将不会任何著作权使用费。会员应该提供给dataSpring且非独占的，无法取消，完全（继承）Sub lisence的权利给dataSpring以及其dataSpring的相关公司。根据该权利协议，dataSpring可以不需要获得会员的承认或者对用户进行补偿，既可在全世界各种媒体上使用，复制，修正，改变，翻译，创作派生物，发送，实行，登载用户所产生的信息内容。</p>
 
-				<p><strong>第二十七条 链接</strong><br/>
+				<p><strong>第二十七条 责任范围和责任限制</strong><br/>
 
-				有时，使用者将可以通过本网站的链接自由连接至由第三机构所运营/持有的网站（以下成为第三机构的网站）。dataSpring放弃对第三机构的网站，或者第三机构的网站所宣传，提供，或者贩卖的产品的保证，且第三机构的网站有可能并未经过dataSpring的确认。不论第三机构的网站所包含的个人信息及隐私保护是如何实施以及运营，dataSpring将不对第三机构的网站上所包含的信息负责。dataSpring将放弃对，第三机构的网站所运营以及所有的项目，以及第三机构的个人隐私，个人信息的保 护，第三机构所提供的商品以及服务的任何提示以及保证。</p>
+				本网站的相关广告活动、购物信息、游戏等信息随时有可能发生变动，本网站不就此做出特别通知。会员知悉并理解由于网上商品信息数量极其庞大，虽然本网站会尽合理的最大努力保证会员所浏览的信息的准确性，但由于众所周知的互联网技术因素等客观原因，本网站显示的信息可能存在一定的滞后性和差错，敬请会员谅解。</p>
 
-				<p><strong>第二十八条 协议的分离</strong><br/>
+				<p><strong>第二十八条 链接</strong><br/>
+
+				有时，使用者将可以通过本网站的链接自由连接至由第三机构所运营/持有的网站（以下成为第三机构的网站）。dataSpring放弃对第三机构的网站，或者第三机构的网站所宣传，提供，或者贩卖的产品的保证，且第三机构的网站有可能并未经过dataSpring的确认。不论第三机构的网站所包含的个人信息及隐私保护是如何实施以及运营，dataSpring将不对第三机构的网站上所包含的信息负责。dataSpring将放弃对，第三机构的网站所运营以及所有的项目，以及第三机构的个人隐私，个人信息的保护，第三机构所提供的商品以及服务的任何提示以及保证。</p>
+
+				<p><strong>第二十九条 协议的分离</strong><br/>
 
 				本会员协议的一部分，无效或者在法律的强制力失效的情况下，本会员协议中的其他条款，依然完全具有法律的强制效应。</p>
 
-				<p><strong>第二十九条 归属法，协商时的管辖仲裁机构</strong><br/>
+				<p><strong>第三十条 归属法，协商时的管辖仲裁机构</strong><br/>
 
-				本会员协议，在排除抵触当地法律的情况下，将以日本的法律为准。在因为会员协议以及或者会员的资格发生争议的情况下，将由日本东京地裁负责仲裁。</p>
+				本会员协议，在排除抵触当地法律的情况下，将以中国的法律为准。在因为会员协议以及或者会员的资格发生争议的情况下，将由中国上海地方法院裁决。</p>
 
-				<p><strong>第三十条 同意</strong><br/>
+				<p><strong>第三十一条 同意</strong><br/>
 
 				会员在使用dataSpring的服务，或者成为dataSpring会员时，将视为同意本会员协议。</p>
 			</li>
