update part statement

--- a/src/Wenwen/FrontendBundle/Resources/views/About/regulations.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/About/regulations.html.twig
@@ -40,7 +40,7 @@
 
 				<p><strong class="font20">第二章　会员</strong></p>
 				<p><strong>第六条 会员的注册</strong><br/>
-				1. 在希望本会员或参与活动时，应根据dataSpring所制定的方法进行会员注册。<br/>
+				1. 在希望使用本服务或参与活动时，应根据dataSpring所制定的方法进行会员注册。<br/>
 				2. 注册会员的人（包括该会员协议的对象，以下将称为&lt;注册者&gt;）在注册时，将被看作同意本会员协议。</p>
 				<p><strong>第七条 注册的承认</strong><br/>
 				1. dataSpring将通过必要的程序，承认会员的注册。在承认会员注册的同时，本协议将生效。</p>
