--- a/src/Wenwen/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Home/index.html.twig
@@ -42,16 +42,16 @@
 				</div>
 			</div>
 		</div>
+		<div class="introBg"></div>
 	</div>
 </div>
-<div class="main-con main-con-process">
-	<img src="{{ asset('img/home/adProcess.png') }}" alt="做问卷积分流程示意图" title="做问卷积分流程示意图">
-	<a class="sLog" href="{{ path('_user_reg') }}"><img src="{{ asset('img/home/adBtn.png') }}" alt="注册赚现金" title="注册赚现金"></a>
+<div class="main-con-process">
+	<a class="sLog" href="{{ path('_user_reg') }}"></a>
 </div>
-<div class="main-con main-con-reward">
+<div class="main-con-reward">
 	<img src="{{ asset('img/home/adAward.png') }}" alt="奖品展示" title="奖品展示">
 </div>
-<div class="main-con main-con-detail">
+<div class="main-con-detail">
 	<div class="party" data-timeout="500">
 		<em class="party-item party01 js-item"></em>
         <em class="party-item party02 js-item"></em>
@@ -61,7 +61,7 @@
         <em class="party-item party06 js-item"></em>
 	</div>
 </div>
-<div class="main-con main-con-action">
+<div class="main-con-action">
 	<div class="w1000">
 		<h1>马上开启91问问之旅，加入小伙伴们赚钱的队伍中来吧！</h1>
 		<p>点击以下按钮完成5秒注册</p>
