--- a/web/css/index.css
+++ b/web/css/index.css
@@ -289,7 +289,7 @@ body {
 .login-wrapper {
   position: absolute;
   z-index: 1000;
-  right: -4px;
+  right: -70px;
   top: 50px;
   background: url(../img/home/loginBg.png) no-repeat center bottom;
   padding: 0 70px 5px; }
@@ -474,19 +474,30 @@ body {
 
 .main-ad {
   height: 549px;
-  background: url(../img/home/adBgx.gif) repeat-x; }
+  background: url(../img/home/adBgx.gif) repeat-x;
+  overflow: hidden; }
 
 .main-ad-con {
+  width: 1000px;
+  height: 549px;
   position: relative;
-  z-index: 1;
-  background: url(../img/home/adBg.png) no-repeat -7px -38px;
-  height: 535px;
-  width: 1130px; }
+  z-index: 1; }
+
+.introBg {
+  background: url(../img/home/adBg.png) no-repeat;
+  height: 575px;
+  width: 807px;
+  position: absolute;
+  left: -80px;
+  top: -26px;
+  z-index: 2; }
 
 .main-ad-con-text {
   color: #fff;
   padding-top: 115px;
-  padding-left: 70px; }
+  padding-left: 70px;
+  position: absolute;
+  z-index: 3; }
   .main-ad-con-text p {
     margin-top: 20px;
     line-height: 32px;
@@ -532,19 +543,22 @@ body {
   margin-bottom: 45px; }
 
 .main-con-process {
-  background: #fffaa9;
-  padding: 50px 0; }
-  .main-con-process img {
-    text-align: center;
-    margin: 0 auto;
-    display: block; }
+  padding: 50px 0;
+  height: 461px;
+  background: url(../img/home/adProcess.png) no-repeat center #fffaa9;
+  overflow: hidden;
+  position: relative; }
   .main-con-process .sLog {
-    padding-top: 20px;
-    display: block; }
+    width: 700px;
+    height: 105px;
+    position: absolute;
+    bottom: 54px;
+    left: 20%; }
 
 .main-con-reward {
   background: #c5e6f7;
-  padding-bottom: 75px; }
+  padding-bottom: 75px;
+  overflow: hidden; }
   .main-con-reward img {
     text-align: center;
     margin: 0 auto;
@@ -552,7 +566,8 @@ body {
 
 .main-con-detail {
   background: #ecf7d5;
-  padding-bottom: 90px; }
+  padding-bottom: 90px;
+  overflow: hidden; }
   .main-con-detail .party {
     background: url(../img/home/wallCon.png) no-repeat;
     height: 521px;
