--- a/web/sass/index.scss
+++ b/web/sass/index.scss
@@ -14,18 +14,29 @@ $main-ad-color: #eb7020;
 .main-ad{
 	height: 549px;
 	background: url(../img/home/adBgx.gif) repeat-x;
+	overflow: hidden;
 }
 .main-ad-con{
+	width: 1000px;
+	height: 549px;
 	position: relative;
 	z-index: 1;
-	background: url(../img/home/adBg.png) no-repeat -7px -38px;
-    height: 535px;
-    width: 1130px;
+}
+.introBg{
+	background: url(../img/home/adBg.png) no-repeat;
+    height: 575px;
+    width: 807px;
+    position: absolute;
+    left: -80px;
+    top: -26px;
+    z-index: 2;
 }
 .main-ad-con-text{
 	color: #fff;
 	padding-top: 115px;
 	padding-left: 70px;
+	position: absolute;
+	z-index: 3;
 	p{
 		margin-top: 20px;
 		line-height: 32px;
@@ -75,21 +86,23 @@ $main-ad-color: #eb7020;
 	}
 }
 .main-con-process{
-	background: #fffaa9;
 	padding: 50px 0;
-	& img{
-		text-align: center;
-		margin: 0 auto;
-		display: block;
-	}
+	height: 461px;
+	background: url(../img/home/adProcess.png) no-repeat center #fffaa9;
+	overflow: hidden;
+	position: relative;
 	.sLog{
-		padding-top: 20px;
-		display: block;
+		width: 700px;
+	    height: 105px;
+	    position: absolute;
+	    bottom: 54px;
+	    left: 20%;
 	}
 }
 .main-con-reward{
 	background: #c5e6f7;
 	padding-bottom: 75px;
+	overflow: hidden;
 	& img{
 		text-align: center;
 		margin: 0 auto;
@@ -99,6 +112,7 @@ $main-ad-color: #eb7020;
 .main-con-detail{
 	background: #ecf7d5;
 	padding-bottom: 90px;
+	overflow: hidden;
 	.party{
 		    background: url(../img/home/wallCon.png) no-repeat;
   			height: 521px;
