--- a/web/css/index.css
+++ b/web/css/index.css
@@ -664,6 +664,102 @@ body {
 .footer {
   margin-top: 0 !important; }
 
+.fbCon {
+  z-index: 9999;
+  position: fixed;
+  bottom: 20px;
+  right: 20px; }
+
+.fdWrap {
+  width: 100px;
+  height: 147px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  background: url(../img/home/feebackF.png) no-repeat;
+  cursor: pointer; }
+
+.fdBox {
+  position: relative; }
+
+.unfdWrap {
+  width: 311px;
+  height: 438px;
+  position: absolute;
+  right: -340px;
+  bottom: 0;
+  background: url(../img/home/feebackUnf.png) no-repeat; }
+
+.unfdWrap ul {
+  padding-right: 40px;
+  padding-top: 20px;
+  margin-left: 24px;
+  margin-top: 50px; }
+
+.unfdWrap li {
+  margin-top: 15px;
+  line-height: 35px; }
+
+.unfdWrap li label {
+  vertical-align: top;
+  display: block; }
+
+.unfdWrap li textarea, .unfdWrap li input {
+  width: 100%; }
+
+.unfdWrap li textarea {
+  width: 100%;
+  height: 110px;
+  line-height: 20px;
+  padding: 5px; }
+
+.unfdWrap li em {
+  color: #ff0000; }
+
+.unfdWrap li .btn {
+  font-size: 16px;
+  width: 100%;
+  height: 48px;
+  text-align: center;
+  line-height: 48px;
+  color: #000;
+  background: #ffdc6b;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  display: inline-block;
+  cursor: pointer; }
+
+.unfdBox {
+  position: relative; }
+
+.fdBox .closeTag {
+  width: 28px;
+  height: 27px;
+  right: 0;
+  top: 0;
+  position: absolute;
+  cursor: pointer; }
+
+.unfdBox .closeTag {
+  width: 98px;
+  height: 67px;
+  right: 0;
+  top: -53px;
+  position: absolute;
+  cursor: pointer; }
+
+.closeBtn {
+  width: 66px;
+  height: 30px;
+  right: 0;
+  bottom: -34px;
+  position: absolute;
+  cursor: pointer; }
+
 .footer {
   margin-top: 50px;
   border-top: 3px solid #d6d9df;
