--- a/src/Wenwen/FrontendBundle/Resources/views/Survey/_sopSurveyList.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Survey/_sopSurveyList.html.twig
@@ -105,5 +105,5 @@
 			</li>
 		</ul>
 	</div>
-	<div class="survey-btn"><% print(model.getAnswerLabel()) %></div>
+	<div class="survey-btn"><a href="javascript:void(0)" class="open-link">可回答</a></div>
 </script>
