--- a/src/Wenwen/FrontendBundle/Resources/views/Survey/_sopSurveyList.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Survey/_sopSurveyList.html.twig
@@ -92,7 +92,7 @@
             </li>
             <li>
                 <span>问卷类型</span>
-                <p title="高积分问卷，基于您回答的属性问卷发送给您。有名额和日期限制，请尽快回答">商业问卷</p>
+                <p title="">商业问卷</p>
             </li>
             <li>
                 <span>回答期限</span>
