--- a/src/Wenwen/FrontendBundle/Resources/views/FulcrumProjectSurvey/error.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/FulcrumProjectSurvey/error.html.twig
@@ -1,7 +1,31 @@
-<div id="end">
-	<div id="finish" class="clearfix">
-    	<p class="client_quotaful fulcrum_error_text">
-            对不起，您不符合这次问卷的要求，敬请期待下次的高积分问卷。<br />
-        </p>
+{% extends 'WenwenFrontendBundle::base.html.twig' %}
+{% block title %}问卷结束：{{ parent() }} {% endblock %}
+
+{% block stylesheet %}
+<link href="{{ asset('css/questionnaire.css') }} " rel="stylesheet" type="text/css">
+{% endblock %}
+
+{% block header %}
+{% include 'WenwenFrontendBundle:Components:_headerSimpleQ.html.twig' %}
+{% endblock %}
+
+{% block body %}
+<div class="qnWrap">
+    <div class="qnCon qnEnd">
+        <div class="qnEndTxt clearfix">
+            <span class="left"><img src="{{ asset('img/questionnaire/normalface.png') }}" alt="图片"></span>
+            <span class="txt left"><h2>亲爱的用户！</h2>
+                对不起，您不符合这次问卷的要求，敬请期待下次的高积分问卷。
+            </span>
+        </div>
     </div>
+    {% include 'WenwenFrontendBundle:Questionnaire:_footer.html.twig' %}
 </div>
+{% endblock %}
+
+{% block footer %}
+{% endblock %}
+
+{% block javascript %}
+{% endblock %}
+
